<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bedroomConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.fragments.BedroomFragment">

    <ImageView
        android:id="@+id/bedroom_screen_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bedroom_screen_scaled"
        android:contentDescription="@string/bedroom_background_image_view" />

    <ImageView
        android:id="@+id/pillow_bedroom_iv"
        android:layout_width="315dp"
        android:layout_height="147dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pillow_scaled"
        android:contentDescription="@string/pillow_texture_in_bedroom_image_view" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="growPet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bedroom_screen_iv"
        app:srcCompat="@drawable/one_up_scaled"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/button_for_instant_pet_grow_up" />

    <Button
        android:id="@+id/button_light"
        android:layout_width="148dp"
        android:layout_height="204dp"
        android:alpha="0"
        android:onClick="toggleLight"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>