<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/typeConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".selection.fragments.TypeSelectionFragment"
    >

    <ImageView
        android:id="@+id/selection_screen_imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/selection_screen_scaled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/eggs_election_background_image_view" />

    <Button
        android:id="@+id/button_select_grass"
        android:layout_width="110dp"
        android:layout_height="170dp"
        android:alpha="0"
        android:onClick="selectGrass"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_select_water"
        android:layout_width="110dp"
        android:layout_height="170dp"
        android:alpha="0"
        android:onClick="selectWater"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toEndOf="@+id/button_select_grass"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_select_fire"
        android:layout_width="110dp"
        android:layout_height="170dp"
        android:alpha="0"
        android:onClick="selectFire"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_select_grass"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/fire_egg_button_image"
        android:layout_width="200dp"
        android:layout_height="240dp"
        android:src="@drawable/fire_egg_scaled"
        app:layout_constraintBottom_toBottomOf="@+id/selection_screen_imageView"
        app:layout_constraintEnd_toStartOf="@+id/button_select_grass"
        app:layout_constraintStart_toStartOf="@+id/selection_screen_imageView"
        app:layout_constraintTop_toTopOf="@+id/selection_screen_imageView"
        app:layout_constraintVertical_bias="0.527"
        android:contentDescription="@string/fire_egg_button_image" />

    <ImageView
        android:id="@+id/grass_egg_button_image"
        android:layout_width="200dp"
        android:layout_height="240dp"
        android:src="@drawable/grass_egg_scaled"
        app:layout_constraintBottom_toBottomOf="@+id/selection_screen_imageView"
        app:layout_constraintEnd_toStartOf="@+id/button_select_water"
        app:layout_constraintStart_toEndOf="@+id/button_select_fire"
        app:layout_constraintTop_toTopOf="@+id/selection_screen_imageView"
        app:layout_constraintVertical_bias="0.527"
        android:contentDescription="@string/grass_egg_button_image" />

    <ImageView
        android:id="@+id/water_egg_button_image"
        android:layout_width="200dp"
        android:layout_height="240dp"
        android:src="@drawable/water_egg_scaled"
        app:layout_constraintBottom_toBottomOf="@+id/selection_screen_imageView"
        app:layout_constraintEnd_toEndOf="@+id/selection_screen_imageView"
        app:layout_constraintStart_toEndOf="@+id/button_select_grass"
        app:layout_constraintTop_toTopOf="@+id/selection_screen_imageView"
        app:layout_constraintVertical_bias="0.527"
        android:contentDescription="@string/water_egg_button_image" />
</androidx.constraintlayout.widget.ConstraintLayout>

